to_fix.txt
(myenv)  ✘ hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  ./zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

✖ error: expected 'identifier', got '<'
   ╭─ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:13:38
   │   12  extern fn socket(domain: int, type_: int, protocol: int) -> int
   │   13  extern fn bind(sockfd: int, addr: ptr<void>, addrlen: int) -> int
   │                                            ^
   │                                            hint: add identifier here
   ╰─

✖ error: expected ')', got '>'
   ╭─ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:13:43
   │   12  extern fn socket(domain: int, type_: int, protocol: int) -> int
   │   13  extern fn bind(sockfd: int, addr: ptr<void>, addrlen: int) -> int
   │                                                 ^
   │                                                 hint: add ) here
   ╰─

 aborting: 2 error(s)

  💡 fix errors and re-run: zxc /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

(myenv)  ✘ hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  ./zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

✖ error: expected 'identifier', got '<'
   ╭─ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:15:40
   │   14  extern fn listen(sockfd: int, backlog: int) -> int
   │   15  extern fn accept(sockfd: int, addr: ptr<void>, addrlen: ptr<int>) -> int
   │                                              ^
   │                                              hint: add identifier here
   ╰─

✖ error: expected ')', got '>'
   ╭─ /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx:15:45
   │   14  extern fn listen(sockfd: int, backlog: int) -> int
   │   15  extern fn accept(sockfd: int, addr: ptr<void>, addrlen: ptr<int>) -> int
   │                                                   ^
   │                                                   hint: add ) here
   ╰─

 aborting: 2 error(s)

  💡 fix errors and re-run: zxc /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/server.zx

(myenv)  ✘ hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  

----
----

- don allow users to name their functions as same as types or structs!!!
(myenv)  hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  ./zxc /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/pipes.zx

✖ gcc compilation error — the generated C has a problem:

  /tmp/zx_2192766338.c:33:11: error: both ‘long long’ and ‘double’ in declaration specifiers
     33 | long long double(long long x);
        |           ^~~~~~
  /tmp/zx_2192766338.c:33:18: error: expected identifier or ‘(’ before ‘long’
     33 | long long double(long long x);
        |                  ^~~~
  /tmp/zx_2192766338.c:36:11: error: both ‘long long’ and ‘double’ in declaration specifiers
     36 | long long double(long long x) {
        |           ^~~~~~
  /tmp/zx_2192766338.c:36:18: error: expected identifier or ‘(’ before ‘long’
     36 | long long double(long long x) {
        |                  ^~~~
  /tmp/zx_2192766338.c: In function ‘main’:
  /tmp/zx_2192766338.c:45:28: error: expected expression before ‘double’
     45 |     long long val = square(double(3LL));
        |                            ^~~~~~

💡 run 'zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/pipes.zx' to inspect the generated C

(myenv)  ✘ hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  

while: 

(myenv)  ✘ hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  cat /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/pipes.zx
// Pipe operator demo
extern fn printf(fmt: str, ...) -> int;


fn double(x: int) -> int { return x * 2 };
fn square(x: int) -> int { return x * x };

my val = 3 |> double |> square; 
printf("\n3 |> double |> square = %lld\n", val);
(myenv)  hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  
# but if i just change the function names, it all works fine;  XD!

---

also make a thing to import files from current dir or so like: use "./"::abc # this means "./zbc.zx"!

--

also when user choses type any as return value of a function then make the return value of that function , the type of the return stmt like:

fn abc() -> any {
   return 23.5444; // then return vlue must be float!
}
* also show a warning if any problems with type any of that function! dont justr assign every any var or fn with long long, try to learn the type of the var's value and then assign it a type in c code!
---

also add more comparig operators in if and match, to utomaticjly match strings or numbers!

also add some basic builtins like toint(), tostr(), ..., len() // to fnd lenght of string or list, and many more types like list and more!

---

when i use @ignore in a test, it shows this stupid error: "(myenv)  hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main  ./zxc test /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/tests.zx

🧪 Found 3 test(s) in /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/tests.zx

✖ Test compile error:
/tmp/zx_test_3915722938.c: In function ‘main’:
/tmp/zx_test_3915722938.c:71:32: error: expected ‘)’ before ‘abc’
   71 |     fprintf(stderr, ZX_SKIP " "abc"\n");
      |            ~                   ^~~
      |                                )


💡 run 'zxc emit /home/hmza/workspaces/hamza/zx-lang/zenx-lang/examples/tests.zx' to inspect the generated C

(myenv)  ✘ hmza@0root  ~/workspaces/hamza/zx-lang/zenx-lang   main ±  



"

in this code: "@test
fn test_addition() {
   assert 1 + 1 == 2, "math is broken";
}


@test
@args={"n":5}
@expect=11
@ignore
fn abc(n: int) -> any {
   return (n*2);
}

extern fn sleep(...) -> int 

@test
@benchmark
@expect=123
fn aaa() -> any {
   sleep(1);
   return 123;
}"

---

Issues to fix:

ptr<void> in extern params fails — ptr<T> not parsed in param types (only in return types)
Function names that clash with C type keywords (double, float, etc.) cause gcc errors — need to rename them in output or error at parse time
@ignore test fprintf generates broken C: fprintf(stderr, ZX_SKIP " "abc"\n") — string literal format wrong
-> any return type should infer the actual type from the return statement
Local file imports: use "./"::abc
Now I'm examining the workspace files to see the current implementation and understand how to address each issue.

I see - ptr<void> uses the word ptr but we don't have TK_TYPE_PTR in the new tokenizer. The keywords map has ptr → TK_TYPE_REF. Let me check.
ptr is not in the keywords map at all — that's bug #1. Now let me read the emitter's test skip code and the any return handling: